--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,2 +1,4 @@
-body
-  background: white
+@import 'abstracts/mixin'
+@import 'vendors/normalize'
+// @import 'components/body'
+@import 'themes/carlos'
