--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,27 +1,102 @@
-doctype html
-html.no-js(lang="")
-		head
-				meta(charset="utf-8")
-				meta(http-equiv="x-ua-compatible" content="ie=edge")
-				title Page Title
-				meta(name="description" content="")
-				meta(name="viewport" content="width=device-width, initial-scale=1")
+html.no-js(lang='en')
+  head
+    meta(content='charset=utf-8')
+    //-CSS
+    //- link(rel='stylesheet', href='{{root_url}}/assets/libs/css/intro.css', type='text/css', media='screen')
+    //- | &#x9;
+    //- link(rel='stylesheet', href='{{root_url}}/assets/libs/css/flexslider.css', type='text/css', media='screen')
+    //- jQuery
+    link(rel="stylesheet", href="/main.css")
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
+    //- FlexSlider
+    //- script(defer='', src='/assets/libs/js/jquery.flexslider.js')
+    //- Modernizr
+    //- script(src='{{ site.baseurl }}/assets/libs/js/modernizr.js')
+    //- Back To Top
+    script(type='text/javascript').
+      $(function(){
+      SyntaxHighlighter.all();
+      });
+      $(window).load(function(){
+      $('.flexslider').flexslider({
+      animation: "slide",
+      slideshow: false,
+      slideshowSpeed: 12000,
+      pausePlay: true,
+      start: function(slider){
+      $('body').removeClass('loading');
+      }
+      });
+      });
+  body
+    //- intro
+    .intro
+      .row
+        .col-md-left-cntct
+          h2 Welcome to MADness!
+          |      
+          h3
+            | &apos;MAD4Jekyll&apos; is a theme for 
+            a(href='https://github.com/jekyll/') Jekyll
+            | .
+          br
+          h4
+            | It is based on 
+            a(href='http://ironsummitmedia.github.io/startbootstrap-clean-blog-jekyll/') Clean Blog
+            |  theme by 
+            a(href='http://startbootstrap.com/') Start Bootstrap
+            | .
+            br
+            br
+            br
+            b Features
+            | : 
+            br
+            br
+            | -- Integrated slider with captions from 
+            a(href='http://flexslider.woothemes.com/basic-slider-with-caption.html') Flexslider
+            | .
+            br
+            br
+            | -- Back To Top arrow.
+            br
+            br
+            | -- A separate section for 
+            a(href='{{ root_url }}/writing/') &apos;blogging&apos;
+            | .
+            br
+            br
+            | -- A separate section for 
+            a(href='{{ root_url }}/gallery/') &apos;galleries&apos;
+            | , beside the featured one at the homepage.
+        |   
+        |         
+        .col-md-right-cntct
+          //- | {% include links.html %}
+    //- slider
+    .flexslider(style='display:none;')
+      ul.slides
+        li
+          img(src='{{root_url}}/assets/owner/slider/bg1.jpg')
+          p.flex-caption
+            | Source: 
+            a(href='https://unsplash.com/') Unsplash
+        |     
+        li
+          img(src='{{root_url}}/assets/owner/slider/bg2.jpg')
+          p.flex-caption
+            | Source: 
+            a(href='https://unsplash.com/') Unsplash
+        |     
+        li
+          img(src='{{root_url}}/assets/owner/slider/bg3.jpg')
+          p.flex-caption
+            | Source: 
+            a(href='https://unsplash.com/') Unsplash
+    |  
+    br
+    h6
+      p
+        | Image Source: 
+        a(href='http://www.wallconvert.com/wallpapers/fantasy/on-cliffs-edge-18900.html') Wallconvert
 
-				link(rel="apple-touch-icon" href="apple-touch-icon.png")
-				link(rel="stylesheet" href='main.css')
-				script(src="js/vendor/modernizr-2.8.3.min.js")
-		body
-				//
-						[if lt IE 8]>
-						<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-						<![endif]
-				// Add your site or application content here
-				p   Hello world! This is a Github Pages Boilerplate ....
-
-				script(src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js")
-				script  window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')
-				script(src="js/plugins.js")
-				script(src="js/main.js")
-				// Google Analytics: change UA-XXXXX-Y to be your site's ID.
-				script  window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date; ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-				script(src="https://www.google-analytics.com/analytics.js" async defer)
