--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,4 +5,4 @@ block content
   h1 github Pages Boilerplate v2
   
   p 
-    | This article tries to answer the three most popular questions regarding fontselection in LATEX. Rather than providing ready-made answers, it tries pri-marily to provide some guidance through the existing documentation.
+    | This article tries to answer the three most popular questions regarding fontselection in LaTeX. Rather than providing ready-made answers, it tries pri-marily to provide some guidance through the existing documentation.
