--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,4 +1,7 @@
 @import 'abstracts/fonts';
-@import 'base/base';
 @import 'abstracts/mixin'
-@import 'components/body'
+@import 'base/html';
+@import 'base/reset'
+// Theme
+@import 'themes/evenhold/components/body'
+@import 'themes/evenhold/components/content'
