--- a/src/stylus/themes/evenhold/components/body.styl
+++ b/src/stylus/themes/evenhold/components/body.styl
@@ -6,6 +6,6 @@ p
   line-height: 1.3em
 
 body
-  font-family: 'Sawarabi Mincho', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 16px
-  padding: 10px 24px
+  background: rgb(238, 238, 238)
