--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,162 @@
-img{width:100%}h1,h2,h3,h4,h5,h6{transform:scaleX(.8598);-o-transform:scaleX(.8598);-moz-transform:scaleX(.8598);-webkit-transform:scaleX(.8598);font-weight:400}p{line-height:1.3em}body{font-family:Sawarabi Mincho,sans-serif;font-size:16px;padding:10px 24px}
+@font-face {
+  font-family: 'Raleway';
+  src: url("../assets/fonts/Raleway/Raleway-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+  font-stretch: normal;
+}
+img {
+  width: 100%;
+}
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+}
+border 0 {
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquotebefore,
+blockquoteafter,
+qbefore,
+qafter {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  transform: scaleX(0.8598);
+  -o-transform: scaleX(0.8598);
+  -moz-transform: scaleX(0.8598);
+  -webkit-transform: scaleX(0.8598);
+  font-weight: normal;
+}
+p {
+  line-height: 1.3em;
+}
+body {
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+  background: #eee;
+}
+.content {
+  padding: 16px;
+  text-align: justify;
+}
+.content h1,
+.content h2 {
+  margin: 14px auto;
+}
