--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -10,7 +10,7 @@ $code-font-size: 0.85em;
 $margin: 50px;
 
 // brand color.
-$brand-color: #f98752;
+$brand-color: #4182E4;
 
 // other major colors.
 $site-title-color: rgba(#000, .6);
