--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -24,74 +24,11 @@
 </li>
 {% endif %}
 
-{% if icons.bitbucket %}
-<li>
-    <a href="https://bitbucket.org/{{ icons.bitbucket }}">
-        <i class="fa fa-fw fa-bitbucket"></i>
-    </a>
-</li>
-{% endif %}
 
 {% if icons.twitter %}
 <li>
     <a href="https://twitter.com/{{ icons.twitter }}">
         <i class="fa fa-fw fa-twitter"></i>
-    </a>
-</li>
-{% endif %}
-
-{% if icons.facebook %}
-<li>
-    <a href="https://www.facebook.com/{{ icons.facebook }}">
-        <i class="fa fa-fw fa-facebook"></i>
-    </a>
-</li>
-{% endif %}
-
-{% if icons.google_plus %}
-<li>
-    <a href="https://plus.google.com/{{ icons.google_plus }}">
-        <i class="fa fa-fw fa-google-plus"></i>
-    </a>
-</li>
-{% endif %}
-
-{% if icons.tumblr %}
-<li>
-    <a href="https://{{ icons.tumblr }}.tumblr.com/">
-        <i class="fa fa-fw fa-tumblr"></i>
-    </a>
-</li>
-{% endif %}
-
-{% if icons.behance %}
-<li>
-    <a href="https://www.behance.net/{{ icons.behance }}">
-        <i class="fa fa-fw fa-behance"></i>
-    </a>
-</li>
-{% endif %}
-
-{% if icons.dribbble %}
-<li>
-    <a href="https://dribbble.com/{{ icons.dribbble }}">
-        <i class="fa fa-fw fa-dribbble"></i>
-    </a>
-</li>
-{% endif %}
-
-{% if icons.flickr %}
-<li>
-    <a href="https://www.flickr.com/photos/{{ icons.flickr }}">
-        <i class="fa fa-fw fa-flickr"></i>
-    </a>
-</li>
-{% endif %}
-
-{% if icons.instagram %}
-<li>
-    <a href="http://instagram.com/{{ icons.instagram }}">
-        <i class="fa fa-fw fa-instagram"></i>
     </a>
 </li>
 {% endif %}
@@ -104,14 +41,6 @@
 </li>
 {% endif %}
 
-{% if icons.pinterest %}
-<li>
-    <a href="http://www.pinterest.com/{{ icons.pinterest }}">
-        <i class="fa fa-fw fa-pinterest"></i>
-    </a>
-</li>
-{% endif %}
-
 {% if icons.reddit %}
 <li>
     <a href="https://www.reddit.com/user/{{ icons.reddit }}">
@@ -120,26 +49,10 @@
 </li>
 {% endif %}
 
-{% if icons.soundcloud %}
-<li>
-    <a href="https://soundcloud.com/{{ icons.soundcloud }}">
-        <i class="fa fa-fw fa-soundcloud"></i>
-    </a>
-</li>
-{% endif %}
-
 {% if icons.stack_exchange %}
 <li>
     <a href="{{ icons.stack_exchange }}">
         <i class="fa fa-fw fa-stack-exchange"></i>
-    </a>
-</li>
-{% endif %}
-
-{% if icons.steam %}
-<li>
-    <a href="http://steamcommunity.com/id/{{ icons.steam }}">
-        <i class="fa fa-fw fa-steam"></i>
     </a>
 </li>
 {% endif %}
@@ -154,7 +67,7 @@
 
 {% if icons.youtube %}
 <li>
-    <a href="https://www.youtube.com/user/{{ icons.youtube }}">
+    <a href="https://www.youtube.com/channel/{{ icons.youtube }}">
         <i class="fa fa-fw fa-youtube"></i>
     </a>
 </li>
