--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,7 +117,6 @@
 {% if page.permalink == '/search/' %}
 <script src="{{ '/assets/js/search.js' | prepend: site.baseurl }}"></script>
 {% endif %}
-
-{% include scripts.html %}
+<!–– {% include scripts.html %} -->
 </body>
 </html>
