--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,4 +10,5 @@ layout: default
         </section>
         {% include article-footer.html page=page share=page.share %}
     </article>
+    <!-- {% include scripts.html %} -->
 </div>
