--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
 
 <footer class="site-footer">
     <div class="inner">
-        <span>Powered by KaTeX and Oromion.</a></span>
+        <span>Powered by </span><a href="https://khan.github.io/">Khan Academy</a><span> and Oromion.</span>
     </div>
 </footer>
 
