--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -15,7 +15,7 @@ $brand-color: #4182E4;
 // other major colors.
 $site-title-color: rgba(#000, .6);
 $page-title-color: $brand-color;
-$background-color: #fff;
+$background-color: #FAFAFA;
 $border-color: rgba(#000, .1);
 
 // typography colors.
