--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,11 @@
-<!-- KaTeX -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.css" integrity="sha384-xNwWFq3SIvM4dq/1RUyWumk8nj/0KFg4TOnNcfzUU4X2gNn3WoRML69gO7waf3xh" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.js" integrity="sha384-UP7zD+aGyuDvxWQEDSRYcvoTxJSD82C6VvuEBktJZGo25CVhDstY9sCDHvyceo9L" crossorigin="anonymous"></script>
+<!-- KaTeX 0.10.1 -->
+<link
+	rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.css"
+	integrity="sha384-b/NoaeRXkMxyKcrDw2KtVtYKkVg3dA0rTRgLoV7W2df3MzeR1eHLTi+l4//4fMwk"
+	crossorigin="anonymous">
+<script
+	defer src="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.js"
+	integrity="sha384-ern5NCRqs6nJ/a4Ik0nB9hnKVH5HwV2XRUYdQl09OB/vvd1Lmmqbg1Mh+mYUclXx"
+	crossorigin="anonymous">
+</script>
