--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,5 @@
 <!-- KaTeX 0.10.1 -->
-<link
-	rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.css"
-	integrity="sha384-b/NoaeRXkMxyKcrDw2KtVtYKkVg3dA0rTRgLoV7W2df3MzeR1eHLTi+l4//4fMwk"
-	crossorigin="anonymous">
-<script
-	defer src="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.js"
-	integrity="sha384-ern5NCRqs6nJ/a4Ik0nB9hnKVH5HwV2XRUYdQl09OB/vvd1Lmmqbg1Mh+mYUclXx"
-	crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.css" integrity="sha384-b/NoaeRXkMxyKcrDw2KtVtYKkVg3dA0rTRgLoV7W2df3MzeR1eHLTi+l4//4fMwk" crossorigin="anonymous">
+
+<script src="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.js" integrity="sha384-ern5NCRqs6nJ/a4Ik0nB9hnKVH5HwV2XRUYdQl09OB/vvd1Lmmqbg1Mh+mYUclXx" crossorigin="anonymous">
 </script>
