Update KaTeX to 0.16.0

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,7 +1,9 @@
-<!-- KaTeX 0.15.3 -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.3/dist/katex.css"
-    integrity="sha384-A3N+UgNMKg9+LRsC2HUE0ECxFY7qhztVFORxHQZEPm7lnog2poqmm7CQ91wSEnBc" crossorigin="anonymous">
+<!-- KaTeX 0.16.0 -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.css"
+    integrity="sha384-1IGr2Yb8xuHjwTG+WoGjj2+I/a/N6z0gDD5YIGCQxywPROOKc3+orbn/R7arWQxD"
+    crossorigin="anonymous">
 
-<script src="https://cdn.jsdelivr.net/npm/katex@0.15.3/dist/katex.js"
-    integrity="sha384-D0gipC03W+lifpletIVjX+11DUvrzNAMhVux0JrrAMt9Ufgu9HcPdS5GxZSDmNxx" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.js"
+    integrity="sha384-I2b1Pcl48X93GxEkGkaMo1hrd6n+IX8H2wgSsMimGbkZoGTve/87h1FjaDNvlpQi"
+    crossorigin="anonymous">
 </script>
