--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,9 +1,9 @@
-<!-- KaTeX 0.16.3 -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.3/dist/katex.css"
-    integrity="sha384-yW1frltt4cd2K6QCmOMx4M+ylOmyrGb+NDouZ1f5VL2f4NN7uBu5PQsmUSgWib1W"
+<!-- KaTeX 0.16.7 -->
+<link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.css"
+    integrity="sha384-YiVwk+MBV52+yIvvplLwDxm3iGDI7dYb731lqsN9ASGBpIpJ/dte35lBIuR5oGFU"
     crossorigin="anonymous">
 
-<script src="https://cdn.jsdelivr.net/npm/katex@0.16.3/dist/katex.js"
-    integrity="sha384-ZfxPSr1+NHNHrv9KI48JF/1RkvdoxKWJPuYyfxE+iexlsGw8tyQR4OuNVNUuzwLN"
-    crossorigin="anonymous">
-</script>
+<script src="https://cdn.jsdelivr.net/npm/katex@0.16.7/dist/katex.js"
+    integrity="sha384-8JJEhHkwY0VI06p7huKe7LqvYgDhSS69qJxWSQGwlB8FmDnAgPKgZGk5Ui0VyuNH"
+    crossorigin="anonymous"></script>
