--- a/src/_includes/kpop.html
+++ b/src/_includes/kpop.html
@@ -1,3 +1,4 @@
 <video controls="" autoplay="" name="media">
-    <source src="https://streamer.radio.co/s06b196587/listen" type="audio/mpeg">
+    <!-- <source src="https://streamer.radio.co/s06b196587/listen" type="audio/mpeg"> -->
+    <source src="https://stream9.mexiserver.com:7122/stream?icy=http" type="audio/mpeg">
 </video>
